--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
     "next": "13.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0"
+  },
+  "devDependencies": {
+    "styled-components": "^5.3.6"
   }
 }
